# roblox-ts-bot

./: Cargo.toml  bun.lockb  package.json
src/: config.rs  index.ts  main.rs  util.rs
src/events/: MessageCreate.ts  interaction_create.rs  message_create.rs  mod.rs
src/jobs/: processThread.ts
